--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 							<iframe width="100%" height="360" src="https://www.youtube.com/embed/AXSF9huGLp0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 							<div class="content">
 								<div class="inner">
-									<h2>FA' ME</h2>
+									<h2>FA' ME - ZAY STONE</h2>
 									
 									<ul class="actions">
 										<li><a href="https://www.youtube.com/embed/AXSF9huGLp0" class="button">LINK TO VIDEO</a></li>
