--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 							<h1>Zay Stone</h1>
 							<ul class="icons">
 												<li><a href="https://twitter.com/zaybstone" class="fa-twitter"><span class="label">Twitter</span></a></li>
-												<li><a href="https://www.facebook.com/isaiah.brooks?fref=search&__tn__=%2Cd%2CP-R&eid=ARDO9UnRNBPW4rzwCNGveyjqTAZ3rPZA_fLXQjmY1avs-0oU6CUx4DtEurNFixkNjjZrQ8vTKvcsUvbr" class="fa-facebook"><span class="label">Facebook</span></a></li>
+												<li><a href="https://www.facebook.com/zaybstone/?__tn__=kCH-R&eid=ARBEWlgAPEmsVdeTn-G48hJM0YBzAFhkn6g3CtzEcI4DYBk2zELeMw4QOvzFyyZ2WHAFC2RYzSY4obOk&hc_ref=ARTJ4j0e_4RjXYVcBNuJDzgUoT9oD3JpN6Gs9xyDEcE7OnqKlRYRBTfK_2P6RYStIGI&fref=nf&__xts__[0]=68.ARCFuJmFCLVP2nDFi26pQ46GhWdlEFmAqrvPutIrW7Q0_wU3gwI1lGmVq2ea-71RvJrvB5jH2oKSkexMWqIWvM8Y-IFjk-I8ESBUh02VZbyVDJ8-qH6O6dDaM1ESO7k8WLCKW75CcCbN5fka4ezPWQUDfS7RHj7qFsGikjQJARQTmVhfaAlL1-Jh43KtQ1jf266J0nYeGartUL1mF2v540HoGNaG_nj3WlzFBk6ObfhIWVdECB7t7lbR8tUqcHvijqLAySsM1a3gA820XRdCru-jSC6JeQGUKwHJepDS-bu-tq55GATtJrlNQc713StVenKrCuGf00p9jEZDB_0" class="fa-facebook"><span class="label">Facebook</span></a></li>
 												<li><a href="https://www.instagram.com/zaybstone/" class="fa-instagram"><span class="label">Instagram</span></a></li>
 												<li><a href="https://www.youtube.com/channel/UCBD71tsBmKqONSl1h75UhpA" class="fa-youtube"><span class="label">YouTube</span></a></li>
 											</ul>
@@ -132,7 +132,7 @@
 										<li>
 											<ul class="icons">
 	<li><a href="https://twitter.com/zaybstone" class="fa-twitter"><span class="label">Twitter</span></a></li>
-												<li><a href="https://www.facebook.com/isaiah.brooks?fref=search&__tn__=%2Cd%2CP-R&eid=ARDO9UnRNBPW4rzwCNGveyjqTAZ3rPZA_fLXQjmY1avs-0oU6CUx4DtEurNFixkNjjZrQ8vTKvcsUvbr" class="fa-facebook"><span class="label">Facebook</span></a></li>
+												<li><a href="https://www.facebook.com/zaybstone/?__tn__=kCH-R&eid=ARBEWlgAPEmsVdeTn-G48hJM0YBzAFhkn6g3CtzEcI4DYBk2zELeMw4QOvzFyyZ2WHAFC2RYzSY4obOk&hc_ref=ARTJ4j0e_4RjXYVcBNuJDzgUoT9oD3JpN6Gs9xyDEcE7OnqKlRYRBTfK_2P6RYStIGI&fref=nf&__xts__[0]=68.ARCFuJmFCLVP2nDFi26pQ46GhWdlEFmAqrvPutIrW7Q0_wU3gwI1lGmVq2ea-71RvJrvB5jH2oKSkexMWqIWvM8Y-IFjk-I8ESBUh02VZbyVDJ8-qH6O6dDaM1ESO7k8WLCKW75CcCbN5fka4ezPWQUDfS7RHj7qFsGikjQJARQTmVhfaAlL1-Jh43KtQ1jf266J0nYeGartUL1mF2v540HoGNaG_nj3WlzFBk6ObfhIWVdECB7t7lbR8tUqcHvijqLAySsM1a3gA820XRdCru-jSC6JeQGUKwHJepDS-bu-tq55GATtJrlNQc713StVenKrCuGf00p9jEZDB_0" class="fa-facebook"><span class="label">Facebook</span></a></li>
 												<li><a href="https://www.instagram.com/zaybstone/" class="fa-instagram"><span class="label">Instagram</span></a></li>
 												<li><a href="https://www.youtube.com/channel/UCBD71tsBmKqONSl1h75UhpA" class="fa-youtube"><span class="label">YouTube</span></a></li>
 											</ul>
