--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<div class="logo_zs">
-							<img src="images/zs.png" width= "35%" height="20%">
+							<img src="../images/zs.png" width= "35%" height="20%">
 							</div>
 							<p>Recording Artist </p>
 							<ul class="icons">
