--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 <meta property="og:title" content="ZAY STONE WEBSITE 🔥">
 <meta property="og:description" content="VISIT WWW.ZAYSTONE.COM for the latest music and events">
 <meta property="og:url" content="https://zaystone.com">
+<meta property="og:image" content="https://zaystone.com/images/65120973_2178867062209480_1006781677537591296_o.jpg" />
 
-
+<meta property="og:image:width" content="400" />
+<meta property="og:image:height" content="300" />
 
 <!--  Non-Essential, But Recommended -->
 
