--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 		<meta charset="utf-8" />
 		<!--  Essential META Tags -->
 
-<meta property="og:title" content="ZAY STONE WEBSITE 🔥">
-<meta property="og:description" content="VISIT WWW.ZAYSTONE.COM for the latest music and events">
+<meta property="og:title" content="ZAY STONE WEBSITE 👽">
+<meta property="og:description" content="Vist WWW.ZAYSTONE.COM for the latest music and events">
 <meta property="og:url" content="https://zaystone.com">
 <meta property="og:image" content="https://zaystone.com/images/65120973_2178867062209480_1006781677537591296_o.jpg" />
 
@@ -136,7 +136,7 @@
 						</section>
 					</section>
 					</section>
-							<!-- Two -->
+							<!-- CALANDER
 					<section id="two" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>EVENT SCHEDULE</h2>
@@ -145,7 +145,7 @@
 								</section>
 							</div>
 					</section>
-
+					-->
 				
 
 				<!-- Three -->
