--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 
 	</head>
 	<body class="is-preload">
+<script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/3b4efbdc02604416481dddffb/455b77d55ccdd647c4f8e7b96.js");</script>
+
 
 		<!-- Sidebar -->
 			<section id="sidebar">
@@ -72,7 +74,7 @@
 
 
 
-
+		
 
 
 
